@@ -1,7 +1,6 @@
 package faang.school.godbless.beksultan2005;
 
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
@@ -13,7 +12,7 @@ public class Main {
         User user1 = new User(1, "Beks", 19, activity1);
         User user2 = new User(2, "Sula", 28, activity2);
 
-        Map<User, String> result = User.findHobbyLovers(Arrays.asList(user1, user2), new HashSet<>(Arrays.asList("voleyball", "swimming")));
+        Map<User, String> result = User.findHobbyLovers(Arrays.asList(user1, user2), Set.of("voleyball", "swimming"));
 
         System.out.println(result.toString());
     }
